# docs/swagger.json
@@ -231,6 +231,12 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "percent": {
+                    "type": "number"
+                },
+                "ttl": {
+                    "type": "string"
                 }
             }
         },
@@ -240,28 +246,17 @@
                 "segments_add": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal.UserSegment"
+                        "$ref": "#/definitions/internal.Segment"
                     }
                 },
                 "segments_del": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal.UserSegment"
+                        "$ref": "#/definitions/internal.Segment"
                     }
                 },
                 "user_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "internal.UserSegment": {
-            "type": "object",
-            "properties": {
-                "segment": {
-                    "$ref": "#/definitions/internal.Segment"
-                },
-                "ttl": {
-                    "type": "string"
                 }
             }
         }
